Implemented backend of new Asset Management capability