@@ -18,6 +18,7 @@
 package org.apache.nifi.registry.flow.mapping;
 
 import org.apache.commons.lang3.ClassUtils;
+import org.apache.nifi.asset.Asset;
 import org.apache.nifi.bundle.BundleCoordinate;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.resource.ResourceCardinality;
@@ -50,6 +51,7 @@ import org.apache.nifi.flow.ExternalControllerServiceReference;
 import org.apache.nifi.flow.ParameterProviderReference;
 import org.apache.nifi.flow.PortType;
 import org.apache.nifi.flow.Position;
+import org.apache.nifi.flow.VersionedAsset;
 import org.apache.nifi.flow.VersionedConnection;
 import org.apache.nifi.flow.VersionedControllerService;
 import org.apache.nifi.flow.VersionedFlowAnalysisRule;
@@ -912,7 +914,7 @@ public class NiFiRegistryFlowMapper {
             } else {
                 versionedParameter = mapParameter(
                     parameter,
-                    getId(Optional.ofNullable(referencedControllerServiceData.get(0).getVersionedServiceId()), parameter.getValue())
+                    getId(Optional.ofNullable(referencedControllerServiceData.getFirst().getVersionedServiceId()), parameter.getValue())
                 );
             }
         } else {
@@ -953,20 +955,38 @@ public class NiFiRegistryFlowMapper {
         versionedParameter.setSensitive(descriptor.isSensitive());
         versionedParameter.setProvided(parameter.isProvided());
 
-        final boolean mapParameterValue = flowMappingOptions.isMapSensitiveConfiguration() || !descriptor.isSensitive();
-        final String parameterValue;
-        if (mapParameterValue) {
-            if (descriptor.isSensitive()) {
-                parameterValue = encrypt(value);
+        final List<Asset> referencedAssets = parameter.getReferencedAssets();
+        if (referencedAssets == null || referencedAssets.isEmpty()) {
+            final boolean mapParameterValue = flowMappingOptions.isMapSensitiveConfiguration() || !descriptor.isSensitive();
+            final String parameterValue;
+            if (mapParameterValue) {
+                if (descriptor.isSensitive()) {
+                    parameterValue = encrypt(value);
+                } else {
+                    parameterValue = value;
+                }
             } else {
-                parameterValue = value;
+                parameterValue = null;
             }
-        } else {
-            parameterValue = null;
+
+            versionedParameter.setValue(parameterValue);
+        } else if (flowMappingOptions.isMapAssetReferences()) {
+            final List<VersionedAsset> assetIds = referencedAssets.stream()
+                .map(this::createVersionedAsset)
+                .toList();
+
+            versionedParameter.setReferencedAssets(assetIds);
         }
 
-        versionedParameter.setValue(parameterValue);
         return versionedParameter;
+    }
+
+    private VersionedAsset createVersionedAsset(final Asset asset) {
+        final VersionedAsset versionedAsset = new VersionedAsset();
+        versionedAsset.setIdentifier(asset.getIdentifier());
+        versionedAsset.setName(asset.getName());
+        versionedAsset.setFilename(asset.getFile().getAbsolutePath());
+        return versionedAsset;
     }
 
     private org.apache.nifi.flow.ScheduledState mapScheduledState(final ScheduledState scheduledState) {
